--- a/web/html/index.html
+++ b/web/html/index.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
-		<h1>Hello World version 2</h1>
+		<h1>Hello World version 2.1</h1>
+		<p>Sample Item this is test ok ok!</p>
 	</body>
 </html>
